# InternPilot

./: .gitignore  README.md  docker-compose.yml
agent_service/: pyproject.toml  requirements.txt
agent_service/app/: main.py
agent_service/app/api/: routes_analysis.py
agent_service/app/core/: config.py
agent_service/app/graphs/: application_graph.py  state.py
agent_service/app/schemas/: analysis.py  job.py  match.py  plan.py  project.py  resume.py  rewrite.py  run.py
agent_service/app/services/: job_extraction.py  resume_extraction.py  resume_rewrite.py  skill_matching.py  structured_output.py
agent_service/tests/: test_application_graph.py  test_job_extraction.py  test_langgraph_workflow.py  test_resume_extraction.py  test_resume_rewrite.py  test_routes_analysis.py  test_schemas.py  test_skill_matching.py
backend/: Dockerfile  pom.xml
backend/src/main/java/com/internpilot/backend/: InternPilotBackendApplication.java
backend/src/main/resources/: application.yml
backend/src/main/resources/db/migration/: V1__create_mvp_schema.sql
backend/src/test/java/com/internpilot/backend/: BusinessResourceIsolationTests.java  InternPilotBackendApplicationTests.java
backend/src/test/resources/: application.yml
docs/: agent-backend-development-rule.md  langchain-ai-module-agent-development-rule.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  styles.css
frontend/src/components/: ApplicationAnalyzer.vue  ResultList.vue
frontend/src/services/: api.js
(+49 files in other folders)
