[project]
name = "internpilot-agent-service"
version = "0.1.0"
description = "FastAPI + LangChain/LangGraph agent service for InternPilot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "langchain>=0.3,<1.0",
  "langgraph>=0.2,<1.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

